Add gotoBox.PlaceholderText to all resource files.

--- a/PixivUWP/Strings/ja/Resources.resw
+++ b/PixivUWP/Strings/ja/Resources.resw
@@ -507,4 +507,7 @@
     <value>Reset</value>
     <comment>重设</comment>
   </data>
+  <data name="gotoBox.PlaceholderText" xml:space="preserve">
+    <value />
+  </data>
 </root>
