--- a/PixivUWP/Strings/en-US/Resources.resw
+++ b/PixivUWP/Strings/en-US/Resources.resw
@@ -513,4 +513,7 @@
   <data name="flyreaderlink.Text" xml:space="preserve">
     <value>Fly Reader</value>
   </data>
+  <data name="gotoBox.PlaceholderText" xml:space="preserve">
+    <value />
+  </data>
 </root>
