--- a/PixivUWP/Strings/ko/Resources.resw
+++ b/PixivUWP/Strings/ko/Resources.resw
@@ -506,4 +506,7 @@
     <value>Reset</value>
     <comment>重设</comment>
   </data>
+  <data name="gotoBox.PlaceholderText" xml:space="preserve">
+    <value />
+  </data>
 </root>
