--- a/PixivUWP/Strings/zh-Hant/Resources.resw
+++ b/PixivUWP/Strings/zh-Hant/Resources.resw
@@ -509,4 +509,7 @@
   <data name="flyreaderlink.Text" xml:space="preserve">
     <value>越飛閱讀</value>
   </data>
+  <data name="gotoBox.PlaceholderText" xml:space="preserve">
+    <value />
+  </data>
 </root>
